--- a/.github/workflows/feed_getter.yml
+++ b/.github/workflows/feed_getter.yml
@@ -1,6 +1,8 @@
 name: Feed Getter
 
 on:
+  schedule:
+    - cron: "0 * * * *" # 毎日毎時0分
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
